# Project_AN5

./: .gitattributes  .gitignore  README.md
AN5_workstation/: .mcp.json  README.md
AN5_workstation/Assets/: CartesianPositionSubscriber.cs  CartesianStateWriterNew.cs  ConfigPanelBridge.cs  ControlArticular.cs  Control_Cartesiano.cs  InverseKinematicsSubscriber.cs  JointPositionSubscriber.cs  LogPanelController.cs  New Material.mat  Record_Panel.cs  RobotKinematics.cs  Ros2CommandSender.cs  Sendtxt.cs  SetpointCartesianPositionSubscriber.cs  pared.mat
AN5_workstation/Assets/AN5_URDF/: gripper.fbx
AN5_workstation/Assets/Editor/: GitLfsCheck.cs  (+1 more)
AN5_workstation/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
AN5_workstation/routines/: espiral_creciente.txt  pick_and_place.txt  pick_and_place_gripper.txt  pick_and_place_reference.txt  reference_pos.txt  trajectory_20260705_102602.txt  trajectory_20260706_150120.txt  trajectory_20260706_194434.txt  trajectory_20260708_112629.txt  trajectory_20260708_114322.txt  trajectory_20260708_120333.txt  trajectory_20260716_111948.txt  trajectory_20260716_112000.txt
ros2_ws/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
ros2_ws/src/an5_mock_sim/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/an5_mock_sim/an5_mock_sim/: mock_cmd_server.py
ros2_ws/src/an5_mock_sim/launch/: real.launch.py  sim.launch.py
ros2_ws/src/an5_mock_sim/scripts/: disable_reject_robot_xmlrpc.sh  disable_robot_ip_alias.sh  enable_robot_ip_alias.sh  reject_robot_xmlrpc.sh
(+340 files in other folders)
